# lsd-lite

./: .gitignore  README.md  lsd_lite_tutorial.ipynb  pyproject.toml  scratch.py
.github/workflows/: publish.yaml  ruff.yaml  tests.yaml  ty.yaml
example_data/: cremi.npz
lsd_lite/: __init__.py  affs.py  lsds.py
src/lsd_lite/: __init__.py  affs.py  lsds.py
tests/: conftest.py  test_affs.py  test_lsds.py
tutorials/: first_steps.py
